[package]
name = "bevy_physics_playground"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.0"
bevy_egui = "0.21.0"
bevy_prototype_debug_lines = "0.11.1"
bevy_rapier2d = "0.22.0"
perlin_noise = "1.0.1"
rand = "0.8.5"
strum = "0.25"
strum_macros = "0.25"
