[package]
name = "bevy_physics_playground"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.1"
bevy-inspector-egui = "0.28.1"
bevy_egui = "0.31.0"
bevy_rapier2d = "0.28.0"
perlin_noise = "1.0.1"
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
